--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.1.1",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
+    "redux-i18n": "^1.5.19",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
