--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.8",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-i18n": "^1.5.19",
