--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "redux": "^4.0.4",
     "redux-i18n": "^1.5.19",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-token-auth": "^0.19.0"
+  },
+  "resolutions": {
+    "react-redux": "^7.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
